Lots of good progress - including a disassembler for debugging and visualization of the disassembler

--- a/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
+++ b/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
@@ -73,7 +73,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "file"
-            value = "dummy"
+            value = "/Users/david/Downloads/sml.gb"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
