--- a/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
+++ b/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
@@ -73,7 +73,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "file"
-            value = "/Users/david/Downloads/sml.gb"
+            value = "/Users/david/Downloads/blargg-test-roms-master/instr_timing/source/test.o"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
