Joypad buttons work - direction keys and z,x plus enter and tab

--- a/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB Release.xcscheme
+++ b/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB Release.xcscheme
@@ -52,6 +52,11 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
+            key = "file2"
+            value = "/Users/david/Downloads/2ND_GB/2ND - FINISHED.gb"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "file"
             value = "/Users/david/Downloads/sml.gb"
             isEnabled = "YES">
