Now saves ram to a file

--- a/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
+++ b/jdeGB.xcodeproj/xcshareddata/xcschemes/jdeGB.xcscheme
@@ -73,7 +73,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "file"
-            value = "/Users/david/Downloads/sml2.gb"
+            value = "/Users/david/Downloads/Legend of Zelda, The - Link&apos;s Awakening DX (U) (V1.2) [C][!].gbc"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
